--- a/Grocery.App/Views/ProductView.xaml
+++ b/Grocery.App/Views/ProductView.xaml
@@ -48,7 +48,7 @@
                             </Label.Triggers>
                         </Label>
                         <Label Grid.Column="2" Text="{Binding ShelfLife}" HorizontalOptions="End"/>
-                        <Label Grid.Column="3" Text="{Binding Price}" HorizontalOptions="End"/>
+                        <Label Grid.Column="3" Text="{Binding Price, StringFormat='€ {0:F2}'}"  HorizontalOptions="End"/>
                     </Grid>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
